# Binary-Correspondence-Intermediate-Representation

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: BCIRConfig.cmake.in
dialect/: CMakeLists.txt
dialect/src/: dialect.cpp
include/bcir/: dialect.hpp  lowering.hpp  runtime.hpp
runtime/: CMakeLists.txt
runtime/src/: lowering.cpp  runtime.cpp
tests/: CMakeLists.txt
tests/data/examples/: matmul.expected  vector_add.expected
tests/data/golden/: macro_hygiene.expected.txt  macro_hygiene.in.bcir  macro_vector_add.expected.txt  macro_vector_add.in.bcir
tests/src/: component_smoke_test.cpp  extended_component_test.cpp
tools/: CMakeLists.txt
tools/src/: bcir_tools_main.cpp
